[metadata]
name = curver
version = 0.5.0
description = 'For calculations in the curve complex'
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/MarkCBell/curver
author = Mark Bell
author_email = mcbell@illinois.edu
license = MIT
license_file = LICENSE
keywords =
    mapping class group
    mapping classes
    laminations
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    decorator>=4.3.0
    networkx>=2.0
    numpy>=1.15.1
    realalg>=0.3.1

[bdist_wheel]
universal = True
